[package]
name = "greptimedb-ingester-nif"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"

[lib]
name = "greptimedb_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37.0"
tokio = { version = "1.40", features = ["full"] }
lazy_static = "1.5.0"
greptimedb-ingester = { path = "../../../greptimedb-ingester-rust" }
log = "0.4"
futures = "0.3"
greptime-proto = { git = "https://github.com/GreptimeTeam/greptime-proto.git", rev = "454c52634c3bac27de10bf0d85d5533eed1cf03f" }
