[package]
name = "greptimedb-ingester-nif"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"

[lib]
name = "greptimedb_nif"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "54.2", features = ["prettyprint"] }
futures = "0.3"
greptime-proto = { git = "https://github.com/GreptimeTeam/greptime-proto.git", rev = "454c52634c3bac27de10bf0d85d5533eed1cf03f" }
greptimedb-ingester = { git = "https://github.com/JimMoen/greptimedb-ingester-rust ", rev = "a2856ddf8edd9f4a7d13f4721499c3f3c4ddca49" }
log = "0.4"
rustler = "0.37.0"
tokio = { version = "1.40", features = ["full"] }
